Enable Prometheus metrics and health endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 #server.port=8089
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.prometheus.enabled=true
 
 server.servlet.context-path=/tpProjet
 #Swagger-UI
